--- a/style.css
+++ b/style.css
@@ -23,3 +23,9 @@ html {
     text-shadow: 4px 4px 0 rgba(0,0,0,0.05);
 }
   
+.timer {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+  
